# OpenGL-Sandbox

./: .clang-format  .gitignore  App.cpp  App.h  CMakeLists.txt  InputListener.cpp  InputListener.h  README.md  RenderObject.cpp  RenderObject.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  core_types.h  format_all.bat  main.cpp
source/: .clang-format  .gitignore  CMakeLists.txt  core_types.h  format_all.bat  glad.c  main.cpp  vcpkg.json
source/App/: App.cpp  App.h
source/App/Log/: Log.cpp  Log.h
source/Input/: InputListener.cpp  InputListener.h
source/Render/: RenderObject.cpp  RenderObject.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
source/Utils/: DateTimeUtils.cpp  DateTimeUtils.h  StringUtils.cpp  StringUtils.h
